fix tags spacing

--- a/themes/exeal/assets/scss/foundation/_tags.scss
+++ b/themes/exeal/assets/scss/foundation/_tags.scss
@@ -64,4 +64,5 @@ ul.tags.tags-small li {
   display: inline;
   padding: 0.25em 0.5em;
   margin: 0.25em 0em;
+  margin-right: 0.25em;
 }
